# gactions

./: .gitignore  BUILD  BUILD.bazel  CHANGELOG.md  README.md  WORKSPACE  cli.go  cli_test.go  gactions.go
api/: BUILD  BUILD.bazel  apiutils.go  apiutils_test.go  request.go  request_test.go  sdk.go  sdk_test.go  testutils.go  yamlutils.go  yamlutils_test.go
api/examples/account_linking_gsi/: BUILD.bazel  manifest.yaml
api/examples/account_linking_gsi/actions/: BUILD  actions.yaml
api/examples/account_linking_gsi/resources/audio/: BUILD
api/examples/account_linking_gsi/resources/images/zh-TW/: BUILD
api/examples/account_linking_gsi/settings/: BUILD  settings.yaml
api/examples/account_linking_gsi/settings/zh-TW/: BUILD  settings.yaml
api/examples/account_linking_gsi/webhooks/: BUILD.bazel  webhook.yaml
api/testdata/: google_fulfillments_valid.yaml  google_fulfillments_with_extra_fields.yaml  google_fulfillments_with_missing_fields.yaml  localized_settings_valid.yaml  manifest_invalid.yaml  manifest_valid.yaml  settings_valid.yaml
cmd/decrypt/: BUILD  decrypt.go  decrypt_test.go
cmd/deploy/: BUILD  deploy.go
cmd/encrypt/: BUILD  encrypt.go
cmd/gactions/: BUILD.bazel  gactions.go
cmd/gactions/cli/: BUILD.bazel  cli.go
cmd/gactions/cli/decrypt/: BUILD.bazel
cmd/gactions/cli/deploy/: BUILD.bazel
cmd/gactions/cli/encrypt/: BUILD.bazel
cmd/gactions/cli/ginit/: BUILD.bazel
cmd/gactions/cli/login/: BUILD.bazel
cmd/gactions/cli/logout/: BUILD.bazel  logout.go
cmd/gactions/cli/notices/: BUILD.bazel
cmd/gactions/cli/pull/: BUILD.bazel  pull.go
cmd/gactions/cli/push/: BUILD.bazel  push.go  push_test.go
cmd/gactions/cli/releasechannels/: BUILD.bazel
cmd/gactions/cli/version/: BUILD.bazel  version.go
cmd/gactions/cli/versions/: BUILD.bazel  versions.go
cmd/ginit/: BUILD  ginit.go  ginit_test.go
cmd/login/: BUILD  login.go
cmd/logout/: BUILD
cmd/notices/: BUILD.bazel  licenses.yaml  notices.go
cmd/pull/: BUILD  pull.go
cmd/push/: BUILD.bazel  push.go
cmd/releasechannels/: BUILD  releasechannels.go
cmd/version/: BUILD.bazel  version.go
cmd/versions/: BUILD  versions.go
log/: BUILD.bazel  log.go
project/: BUILD  project.go  studio.go  studio_test.go
scripts/: ci.cmd  ci.sh  configure.sh
versions/: BUILD  BUILD.bazel  version_names.bzl  versions.go
