load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_embed_data", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/actions-on-google/gactions
gazelle(name = "gazelle")

test_suite(
    name = "all_tests",
    tags = ["-notwindows"],
    visibility = [":__pkg__"],
)

go_binary(
    name = "gactions",
    srcs = [
        "//cmd/gactions:gactions.go"
    ],
    deps = [
        "//cmd/gactions/cli:cli",
        "//versions",
    ],
)

go_embed_data(
    name = "client_not_so_secret_embed_data_go",
    src = "data/client_not_so_secret.json",
    package = "cli",
    var = "clientNotSoSecretJSON",
    visibility = ["//visibility:public"],
)
