load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

package(default_visibility = ["//visibility:public"])

# gazelle:prefix github.com/actions-on-google/gactions/cmd/gactions/cli
gazelle(name = "gazelle")

go_library(
    name = "cli",
    srcs = [
        "cli.go",
        "//:client_not_so_secret_embed_data_go",
    ],
    importpath = "github.com/actions-on-google/gactions/cmd/gactions/cli",
    deps = [
        "//api:sdk",
        "//cmd/gactions/cli/decrypt:decrypt",
        "//cmd/gactions/cli/deploy:deploy",
        "//cmd/gactions/cli/encrypt:encrypt",
        "//cmd/gactions/cli/ginit:ginit",
        "//cmd/gactions/cli/login:login",
        "//cmd/gactions/cli/logout:logout",
        "//cmd/gactions/cli/notices:notices",
        "//cmd/gactions/cli/pull:pull",
        "//cmd/gactions/cli/push:push",
        "//cmd/gactions/cli/releasechannels:releasechannels",
        "//cmd/gactions/cli/version:version",
        "//cmd/gactions/cli/versions:versions",
        "//log",
        "//project:studio",
        "@com_github_spf13_cobra//:go_default_library",
    ],
    visibility = ["//visibility:public"],
)
