load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

package(default_visibility = ["//visibility:public"])

# gazelle:prefix github.com/actions-on-google/gactions/cmd/gactions/cli/ginit
gazelle(name = "gazelle")

test_suite(
    name = "all_tests",
    tags = ["-notwindows"],
)

go_library(
    name = "ginit",
    srcs = ["ginit.go"],
    importpath = "github.com/actions-on-google/gactions/cmd/gactions/cli/ginit",
    deps = [
        "//api:sdk",
        "//log",
        "//project",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)

go_test(
    name = "ginit_test",
    size = "small",
    srcs = ["ginit_test.go"],
    embed = [":ginit"],
    tags = ["notwindows"],
    deps = [
        "//project",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)
