load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

package(default_visibility = ["//visibility:public"])

# gazelle:prefix github.com/actions-on-google/gactions/cmd/gactions/cli/releasechannel
gazelle(name = "gazelle")

go_library(
    name = "releasechannels",
    srcs = ["releasechannels.go"],
    importpath = "github.com/actions-on-google/gactions/cmd/gactions/cli/releasechannels",
    deps = [
        "//api:sdk",
        "//project",
        "//project:studio",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)
