load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

package(default_visibility = ["//visibility:public"])

# gazelle:prefix github.com/actions-on-google/gactions/cmd/gactions/cli/version
gazelle(name = "gazelle")

go_library(
    name = "version",
    srcs = ["version.go"],
    importpath = "github.com/actions-on-google/gactions/cmd/gactions/cli/version",
    deps = [
        "//log",
        "//versions",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)
